@@ -5,21 +5,13 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
 
 - how to manipulate order of handlers (not just Perl*Handlers)
 
-- tweak $r->custom_response to return the current ErrorDocument
-
 - %Files doesnt work, nor does @DirectoryIndex outside of %Location
-
-- test 5 in t/internal/redirect.t with CGI 2.48.
 
 - -Duseperlio w/o -Dusesfio, #ifndef PERLIO_IS_STDIO, #define PERLIO_IS_STDIO
 
 - look at mysqlbug script
 
 - win32 socket bug (WSAStartup() needed for each thread?)
-
-- solaris troubles when Perl is build with -B/usr/ccs/bin/ but Apache is not
-
-- Embperl troubles w/ 1.18 but not 1.17
 
 - Makefile.PL should always push load_modules.pl for 'make test' 
 
